code_exp/log/run_experiments_separately_20250715_142552.log
2025-07-15 14:25:52,267 - INFO - ====== 开始分别运行所有实验 ======
2025-07-15 14:25:52,267 - INFO - 步骤1: 生成证书数据集
2025-07-15 14:25:52,267 - INFO - 运行命令：['python', 'generate_dataset.py'] (CWD: /Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts)
2025-07-15 14:26:00,022 - INFO - 命令成功完成：['python', 'generate_dataset.py']
2025-07-15 14:26:00,022 - INFO - 步骤2: 检查Hardhat节点
2025-07-15 14:26:00,027 - INFO - Hardhat节点未运行，正在启动...
2025-07-15 14:26:10,036 - INFO - Hardhat节点已成功启动
2025-07-15 14:26:10,037 - INFO - 运行 实验5: 撤销机制效率分析
2025-07-15 14:26:10,037 - INFO - 运行实验5 - 撤销机制效率分析
2025-07-15 14:26:10,039 - INFO - 运行命令：['python', 'temp_exp5.py'] (CWD: /Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts)
2025-07-15 14:26:10,068 - ERROR - 命令执行失败：['python', 'temp_exp5.py']
2025-07-15 14:26:10,068 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py", line 60
    end_time = time.time()
                          ^
IndentationError: unindent does not match any outer indentation level

2025-07-15 14:26:10,069 - ERROR - 实验5: 撤销机制效率分析 运行失败，继续下一个实验
2025-07-15 14:26:15,074 - INFO - 运行 实验6: 节点故障恢复测试
2025-07-15 14:26:15,074 - INFO - 运行实验6 - 节点故障恢复测试
2025-07-15 14:26:15,075 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/run_fault_test.py'] (CWD: /Users/yangzongyou/Downloads/iccip 2022/code_exp)
2025-07-15 14:34:07,595 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/run_fault_test.py']
2025-07-15 14:34:07,596 - INFO - 实验6: 节点故障恢复测试 运行成功
2025-07-15 14:34:07,596 - INFO - 分析所有实验结果
2025-07-15 14:34:07,596 - INFO - 分析所有实验结果
2025-07-15 14:34:07,596 - INFO - 运行命令：['python', 'analyze_results.py'] (CWD: /Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts)
2025-07-15 14:34:11,382 - INFO - 命令成功完成：['python', 'analyze_results.py']
2025-07-15 14:34:11,382 - INFO - 运行命令：['python', 'analyze_fault_tolerance.py'] (CWD: /Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts)
2025-07-15 14:34:12,471 - INFO - 命令成功完成：['python', 'analyze_fault_tolerance.py']
2025-07-15 14:34:12,471 - INFO - 实验结果分析成功
2025-07-15 14:34:12,471 - INFO - Hardhat节点已关闭
2025-07-15 14:34:12,471 - INFO - ====== 所有实验运行完成 ======
2025-07-15 14:34:12,471 - INFO - 请查看 data/ 目录和 analysis/ 目录获取实验结果和分析
